--- a/CUHK_RA_TASK/NLP_Task1_final.ipynb
+++ b/CUHK_RA_TASK/NLP_Task1_final.ipynb
@@ -440,8 +440,8 @@
         "from sentence_transformers import SentenceTransformer\n",
         "\n",
         "# 可选：启用OpenMP并行（需安装）\n",
-        "import os\n",
-        "os.environ[\"OMP_NUM_THREADS\"] = \"4\"  # 设为CPU物理核心数\n",
+        "#import os\n",
+        "#os.environ[\"OMP_NUM_THREADS\"] = \"4\"  # 设为CPU物理核心数\n",
         "\n",
         "!wget -O content_samples.jl -qq --no-check-certificate \"https://drive.usercontent.google.com/u/0/uc?id=1s_k8Gs7ZqYuRgGYPSlgUUN27G32zeKc-&export=download\""
       ],
@@ -475,7 +475,7 @@
           "height": 423
         },
         "id": "YHN-osiXkwRq",
-        "outputId": "b78243cf-041a-4a9f-fe69-0f1f2a56e686"
+        "outputId": "b286871b-a77a-4839-f4e0-ea35c8a15390"
       },
       "execution_count": 2,
       "outputs": [
@@ -513,7 +513,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-67122755-1c39-4771-88ed-28d9d3fc15c3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-81105880-8aec-4dfa-b667-e4f16fc57656\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -611,7 +611,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-67122755-1c39-4771-88ed-28d9d3fc15c3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-81105880-8aec-4dfa-b667-e4f16fc57656')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -663,12 +663,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-67122755-1c39-4771-88ed-28d9d3fc15c3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-81105880-8aec-4dfa-b667-e4f16fc57656 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-67122755-1c39-4771-88ed-28d9d3fc15c3');\n",
+              "        const element = document.querySelector('#df-81105880-8aec-4dfa-b667-e4f16fc57656');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -688,8 +688,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a4d1dca5-7398-4d5a-bccd-7c7bffe47412\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a4d1dca5-7398-4d5a-bccd-7c7bffe47412')\"\n",
+              "<div id=\"df-9b8396ad-9e79-4641-9ee4-dd968e408d55\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9b8396ad-9e79-4641-9ee4-dd968e408d55')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -808,7 +808,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a4d1dca5-7398-4d5a-bccd-7c7bffe47412 button');\n",
+              "        document.querySelector('#df-9b8396ad-9e79-4641-9ee4-dd968e408d55 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -840,7 +840,7 @@
           "height": 452
         },
         "id": "h0rIryEJn3Bl",
-        "outputId": "37719bee-8dad-4972-d7dd-13a48ec57cd3"
+        "outputId": "56781b33-4ea7-4af8-c9b3-b33b53569820"
       },
       "execution_count": 3,
       "outputs": [
@@ -873,6 +873,7 @@
         "import spacy\n",
         "#from nltk.corpus import stopwords\n",
         "import nltk\n",
+        "from nltk.corpus import stopwords # 一定要import!!!\n",
         "nltk.download('stopwords')\n",
         "\n",
         "# 加载语言模型\n",
@@ -899,9 +900,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XhSGLZYVVCM4",
-        "outputId": "b908af4f-3aca-4929-d48f-d5f688d0d458"
+        "outputId": "572ebd64-8610-4e98-97e4-770533fe4cc9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -926,7 +927,7 @@
         "id": "NpW5UcwJWLHx",
         "outputId": "2b30a99b-cb5f-4a0f-f2b0-c0ab0921b851"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1334,7 +1335,7 @@
           ]
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1770,7 +1771,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1852,7 +1853,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1926,7 +1927,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
