--- a/25Spring_NLP_Assignment_3_TrainLLM.ipynb
+++ b/25Spring_NLP_Assignment_3_TrainLLM.ipynb
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "6f6c6af6",
       "metadata": {
         "colab": {
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "_T66f30GsT0t",
       "metadata": {
         "colab": {
@@ -169,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "wye4Wm9rXgFF",
       "metadata": {
         "colab": {
@@ -466,7 +466,7 @@
         }
       ],
       "source": [
-        "# 5mins for loading\n",
+        "# 3mins for loading\n",
         "# Current Memory-Usage: 3422MiB/15360MiB\n",
         "import torch\n",
         "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
@@ -503,7 +503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "bpWUSDliX-e2",
       "metadata": {
         "id": "bpWUSDliX-e2"
@@ -518,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "ZWzMDILnYecp",
       "metadata": {
         "id": "ZWzMDILnYecp"
@@ -567,7 +567,7 @@
         "outputId": "220129ea-b980-4793-acab-f3cd2cdbe1ed"
       },
       "id": "PR5pZT465B5e",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,7 +589,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "631c6fd1",
       "metadata": {
         "id": "631c6fd1",
@@ -687,7 +687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "VlKzEROYYuAR",
       "metadata": {
         "id": "VlKzEROYYuAR",
@@ -835,7 +835,7 @@
         "outputId": "2c99aa5c-6db5-41e9-b764-521a291e7f66"
       },
       "id": "ajHX7AArq593",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -854,7 +854,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "MYS6k8ODiRwf",
       "metadata": {
         "id": "MYS6k8ODiRwf",
@@ -988,12 +988,12 @@
         "id": "75TWdrdUOPx3"
       },
       "id": "75TWdrdUOPx3",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "yyFrEPnXfm5m",
       "metadata": {
         "id": "yyFrEPnXfm5m"
@@ -1007,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "cGeKQrgRfpcC",
       "metadata": {
         "id": "cGeKQrgRfpcC",
@@ -1128,7 +1128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "77035f45",
       "metadata": {
         "id": "77035f45"
@@ -1163,7 +1163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "77f96057",
       "metadata": {
         "id": "77f96057",
@@ -1337,7 +1337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "3a4f39e0",
       "metadata": {
         "id": "3a4f39e0",
@@ -1388,7 +1388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "_5_G78x_wF4w",
       "metadata": {
         "id": "_5_G78x_wF4w",
@@ -1453,7 +1453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "24719a28",
       "metadata": {
         "id": "24719a28",
@@ -1489,7 +1489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "eQWOFwHqvUFZ",
       "metadata": {
         "id": "eQWOFwHqvUFZ",
@@ -1552,7 +1552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "d346e523",
       "metadata": {
         "id": "d346e523",
@@ -1597,7 +1597,7 @@
         "outputId": "eb3ece28-3b7e-4c0d-dcb1-c84292eb6433"
       },
       "id": "4mLV-SFtwzbY",
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1638,7 +1638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "id": "b8502540",
       "metadata": {
         "id": "b8502540",
@@ -1717,7 +1717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "id": "4e4c3ad5",
       "metadata": {
         "id": "4e4c3ad5",
@@ -1838,7 +1838,7 @@
         }
       },
       "id": "R0QL0qmgLmAt",
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1927,7 +1927,7 @@
         }
       },
       "id": "8v8_2PUsLndD",
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1955,6 +1955,7 @@
         "from sacrebleu import corpus_bleu\n",
         "from rouge_score import rouge_scorer\n",
         "from multiprocessing import Pool, cpu_count\n",
+        "multiprocessing.set_start_method('spawn') # RuntimeError: Cannot re-initialize CUDA in forked subprocess\n",
         "\n",
         "class FinancialQAEvaluator:\n",
         "    def __init__(self, model, tokenizer, test_data=dataset['test']):\n",
@@ -2078,7 +2079,7 @@
         "id": "W0gRRsffH91i"
       },
       "id": "W0gRRsffH91i",
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2108,7 +2109,7 @@
         }
       },
       "id": "4g6VKk8UKJe3",
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3279,6 +3280,37 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "def visualize_results(metrics):\n",
+        "    fig, ax = plt.subplots(1, 2, figsize=(12, 4))\n",
+        "\n",
+        "    # Metric Scores\n",
+        "    ax[0].bar(['Accuracy', 'BLEU-4', 'ROUGE-L'],\n",
+        "             [metrics['accuracy'], metrics['bleu4'], metrics['rougeL']])\n",
+        "    ax[0].set_ylim(0, 1)\n",
+        "    ax[0].set_title('Performance Metrics')\n",
+        "\n",
+        "    # Error Distribution\n",
+        "    labels = list(metrics['error_distribution'].keys())\n",
+        "    values = list(metrics['error_distribution'].values())\n",
+        "    ax[1].pie(values, labels=labels, autopct='%1.1f%%')\n",
+        "    ax[1].set_title('Error Type Distribution')\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.savefig('evaluation_results.png')\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "hJS9k5MD-t65"
+      },
+      "id": "hJS9k5MD-t65",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
